--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.2",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.3",
+    "js-cookie": "^3.0.5",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
+    "next": "latest",
+    "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "react-hook-form": "^7.46.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/react": "^18.2.23",
     "autoprefixer": "latest",
     "postcss": "latest",
-    "tailwindcss": "latest"
+    "tailwindcss": "^3.3.3"
   }
 }
